// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`E2E - react Monorepo project Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking eslint-plugin-react
- Symlinking jest-environment-jsdom
- Symlinking react-test-renderer
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @prettier/plugin-oxc
- Symlinking @types/jest
- Symlinking eslint-config-prettier
- Symlinking eslint-plugin-jest
- Symlinking import-sort-style-module
- Symlinking jest
- Symlinking lint-staged
- Symlinking prettier
- Symlinking prettier-plugin-import-sort
- Symlinking pretty-quick
- Symlinking ts-jest
Symlinking dev dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - typescript

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking eslint-plugin-react
- Symlinking jest-environment-jsdom
- Symlinking react-test-renderer
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @prettier/plugin-oxc
- Symlinking @types/jest
- Symlinking @types/node
- Symlinking eslint-config-prettier
- Symlinking eslint-plugin-jest
- Symlinking import-sort-style-module
- Symlinking jest
- Symlinking lint-staged
- Symlinking prettier
- Symlinking prettier-plugin-import-sort
- Symlinking pretty-quick
- Symlinking ts-jest
Symlinking dev dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - @eslint/js
  - eslint
  - typescript
  - typescript-eslint

Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/react":
  - @types/react
  - @types/react-dom

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 2`] = `
{
  "build": "tsc --noEmit",
  "dev": "vite",
  "format": "prettier --cache --write '**/*.ts'",
  "jest": "jest --detectOpenHandles --forceExit",
  "lint": "eslint "src/**/*.{ts,tsx}"",
  "prepare": "ts-dev-tools install",
  "preview": "vite preview",
  "test": "npm run jest --maxWorkers=50%",
  "test:ci": "npm run test:cov --runInBand",
  "test:cov": "npm run test --coverage",
  "test:watch": "npm run jest --watch --maxWorkers=25%",
}
`;

exports[`E2E - react Simple project Installs react package 3`] = `
{
  "plugins": [
    "@prettier/plugin-oxc",
  ],
  "printWidth": 100,
  "semi": true,
  "trailingComma": "es5",
}
`;

exports[`E2E - react Simple project Installs react package 4`] = `
{
  "collectCoverageFrom": [
    "**/src/**/*.[jt]s?(x)",
  ],
  "preset": "ts-jest",
  "testEnvironment": "jsdom",
  "testMatch": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)",
  ],
}
`;
